--- a/templates/_top.html
+++ b/templates/_top.html
@@ -17,19 +17,22 @@
     <div id="toast" class="flex flex-col justify-center fixed w-full top-4 z-10"></div>
     <div class="flex w-full py-5 justify-between border-b border-zinc-200 mb-14">
         <div class="w-1/3 flex gap-3 justify-start items-center pl-20">
-            <a class="text-3xl font-semibold" href="/">Wolt</a>
+            <a class="text-5xl font-bold font-baloo" href="/">Wolt</a>
             <div class="p-2 ml-3 bg-blue-100 rounded-full">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-7 stroke-blue-700">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
                     <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z" />
                 </svg>
             </div>
-            <p class="text-sm font-semibold text-blue-700 hover:text-blue-800 transition-colors transform">
+            <p class="text-sm font-semibold text-blue-700">
                 Copenhagen<p>
             </div>
         
-            <div class="flex gap-3 w-1/3 justify-end pr-20">
-                <a href="" class="btn-secondary rounded-lg text-base">Login</a>
-                <a href="" class="btn-primary rounded-lg">Sign Up</a>
+            <div class="flex gap-3 w-2/5 justify-end items-center pr-20">
+                <a href="{{ url_for('view_signup_restaurant') }}" class="text-center text-sm font-light text-blue-600 border-b-1 border-transparent w-fit mx-auto hover:border-blue-600 transition-colors transform">
+                    Want to register your restaurant?
+                </a>
+                <a href="/?view=signup" class="btn-secondary rounded-lg text-base cursor-pointer">Sign Up</a>
+                <a href="/?view=login" class="btn-primary rounded-lg cursor-pointer" >Login</a>
             </div>
         </div>
