--- a/templates/view_customer.html
+++ b/templates/view_customer.html
@@ -1,6 +1,6 @@
 {% include "_top_logged.html" %}
 
-<main class="w-full flex mt-10 gap-5">
+<main class="w-full flex gap-5 px-20">
     <div id="map" class="w-full h-screen rounded-xl"></div>
 
     <div class="w-full h-fit">
