--- a/templates/view_forgot_password.html
+++ b/templates/view_forgot_password.html
@@ -1,17 +1,21 @@
 {% include "_top.html" %}
 
-<main class="w-full h-100vh d-flex p-items-center">
-    <form id="frm_forgot_password" class="w-25% d-flex flex-col gap-4 mx-auto">
-        <div class="d-flex flex-col">
-            <label for="user_email">
+<main class="w-full h-full px-20">
+    <div>
+        <h1 class="text-4xl font-bold pb-3">Reset password</h1>
+        <p class="text-xl font-light text-gray-700">Type in your email and we will send a reset link to your inbox.</p>
+    </div>
+    <form id="frm_forgot_password" class="flex flex-col gap-4 mx-auto py-36 w-2/6">
+        <div class="flex flex-col">
+            <label for="user_email" class="text-sm text-gray-600 mb-1">
                 <span>Email</span>
             </label>
-            <input name="user_email" type="text" mix-check="{{ x.EMAIL_REGEX }}" />
+            <input 
+                name="user_email" 
+                type="text" 
+                mix-check="{{ x.EMAIL_REGEX }}" />
         </div>
-
-        <button mix-post="/forgot-password" mix-data="#frm_forgot_password">Reset password</button>
-
-        <a href="{{url_for('view_signup')}}" class="text-a-center">Signup</a>
+        <button class="btn-primary rounded-md" mix-post="/forgot-password" mix-data="#frm_forgot_password">Reset password</button>
     </form>
 </main>
 
