--- a/templates/view_index.html
+++ b/templates/view_index.html
@@ -1,9 +1,9 @@
 {% include "_top.html" %}
 
 <main class="w-full h-full flex px-20">
-    <div id="map" class="w-full h-screen rounded-xl"></div>
-    <div class="w-full h-full">
-        
+    <div id="map" class="w-full h-[48rem] rounded-xl"></div>
+    <div class="w-full h-full flex justify-center items-center">
+        {% include content_template%}
     </div>
 </main>
 
