--- a/templates/__header_admin.html
+++ b/templates/__header_admin.html
@@ -1,6 +1,6 @@
-<div class="flex w-full py-5 border-b border-zinc-200 mb-14">
+<div class="flex w-full items-center py-5 border-b border-zinc-200 mb-14">
   <div class="pl-20 w-1/3">
-    <a class="text-3xl font-semibold" href="/{{ user.roles[0] }}">Wolt</a>
+    <a class="text-5xl font-bold font-baloo" href="/{{ user.roles[0] }}">Wolt</a>
   </div>
 
   <div class="w-1/3 flex justify-center gap-4">
