--- a/templates/view_signup.html
+++ b/templates/view_signup.html
@@ -1,7 +1,9 @@
-{% include "_top.html" %}
 
-<main class="w-full h-screen flex items-center">
-    <form id="frm_user_signup" class="w-full max-w-sm flex flex-col gap-6 mx-auto p-8 shadow-lg rounded-md">
+    <form id="frm_user_signup" class="border-1 border-zinc-100 w-full max-w-sm flex flex-col gap-6 mx-auto p-8 shadow-lg rounded-md">
+        <div>
+            <h1 class="text-3xl font-bold pb-3">Sign up</h1>
+            <p class=" font-light text-gray-700">Register an account to order your next meal</p>
+        </div>
         <div>
             <label for="user_role" class="text-sm text-gray-600 mb-1">Role</label>
             <select
@@ -39,20 +41,22 @@
                 mix-check="{{ x.ADDRESS_REGEX }}"/>
         </div>
 
-        <div class="flex flex-col">
-            <label for="user_postalcode" class="text-sm text-gray-600 mb-1">Postalcode</label>
-            <input
-                name="user_postalcode"
-                type="text"
-                mix-check="{{ x.POSTALCODE_REGEX }}"/>
-        </div>
-
-        <div class="flex flex-col">
-            <label for="user_city" class="text-sm text-gray-600 mb-1">City</label>
-            <input
-                name="user_city"
-                type="text"
-                mix-check="{{ x.ADDRESS_REGEX }}"/>
+        <div class="flex gap-3">
+            <div class="flex flex-col w-2/3">
+                <label for="user_city" class="text-sm text-gray-600 mb-1">City</label>
+                <input
+                    name="user_city"
+                    type="text"
+                    mix-check="{{ x.ADDRESS_REGEX }}"/>
+            </div>
+            <div class="flex flex-col w-1/3">
+                <label for="user_postalcode" class="text-sm text-gray-600 mb-1">Postalcode</label>
+                <input
+                    name="user_postalcode"
+                    type="text"
+                    mix-check="{{ x.POSTALCODE_REGEX }}"/>
+            </div>
+    
         </div>
 
         <div class="flex flex-col">
@@ -77,14 +81,7 @@
         <button
             mix-post="/users"
             mix-data="#frm_user_signup"
-            class="bg-blue-500 text-white font-medium py-2 px-4 rounded-md hover:bg-blue-600 transition duration-200">
+            class="btn-primary rounded-md">
             Signup
         </button>
-
-        <a href="{{ url_for('view_signup_restaurant') }}" class="text-center text-blue-500 hover:text-blue-600 transition duration-200">
-            Want to register your restaurant?
-        </a>
     </form>
-</main>
-
-{% include "_bottom.html" %}
