--- a/templates/view_admin.html
+++ b/templates/view_admin.html
@@ -1,6 +1,6 @@
 {% include "_top_logged.html" %}
 
-<main class="w-full pt-5">
+<main class="w-full px-20">
     <div class="w-full h-100vh">
         <h1 class="text-3xl">Admin</h1>
     </div>
