--- a/templates/__header_admin.html
+++ b/templates/__header_admin.html
@@ -5,25 +5,26 @@
 
   <div class="w-1/3 flex justify-center gap-4">
     <a href="{{url_for('view_all_users')}}" class="btn-primary">See all users</a>
+    <a href="{{url_for('view_all_restaurants_admin')}}" class="btn-primary">See all restaurants</a>
     <a href="{{url_for('view_all_items_admin')}}" class="btn-primary">See all items</a>
   </div>
 
-    <div class="relative dropdown-container pr-20 w-1/3 flex justify-end">
-        <button class="flex items-center gap-2 p-1 rounded-full hover:bg-gray-300 bg-gray-200 w-20" id="dropdown-btn">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-            </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-            </svg>
-        </button>
-  
-        <div id="dropdown-menu" class="absolute right-0 hidden mt-1 bg-white rounded-md shadow-lg w-48 z-50">
-            <form method="POST" action="{{url_for('logout')}}" class="">
-                <button class="w-full text-left hover:bg-gray-200 p-2 rounded-md">Logout</button>
-            </form>
-            <a href="{{ url_for('view_edit_profile') }}" class="w-full text-left hover:bg-gray-200 p-2 rounded-md block">Edit profile</a>
-        </div>
+  <div class="relative dropdown-container pr-20 w-1/3 flex justify-end">
+    <button class="flex justify-between items-center gap-2 pr-3 p-0.5 rounded-full cursor-pointer hover:bg-zinc-300 bg-zinc-200" id="dropdown-btn">
+      <span class=" px-2 py-1 rounded-full flex justify-center items-center bg-[#CFFFCC] border-2 border-white">
+        <p class="uppercase text-sm text-zinc-500">{{ user.account_name }}</p>
+      </span>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-5">
+        <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+      </svg>
+    </button>
+
+    <div id="dropdown-menu" class="absolute right-20 hidden mt-12 bg-white rounded-md shadow-lg w-48 z-50">
+      <div class="p-2"><a href="{{ url_for('view_edit_profile') }}" class="p-2 w-full text-left hover:bg-zinc-100 rounded-md block">Edit profile</a></div>
+        <form method="POST" action="{{url_for('logout')}}" class="border-zinc-200 border-t-1">
+            <div class="p-2"><button class="w-full text-left hover:bg-zinc-100 p-2 rounded-md">Logout</button></div>
+        </form>
     </div>
+  </div>
   </div>
 
