--- a/templates/view_edit_profile.html
+++ b/templates/view_edit_profile.html
@@ -1,8 +1,8 @@
 {% include "_top_logged.html" %}
 
-<main class="w-full flex flex-col items-center px-4">
-    <form action="PUT" id="edit-frm" class="pt-6 w-full max-w-md flex flex-col gap-6 mx-auto shadow-lg p-10 rounded-md mt-20">
-        <h1 class="text-2xl font-bold">Edit Profile</h1>
+<main class="w-full px-20">
+    <h1 class="text-5xl font-bold pb-10">Edit profile</h1>
+    <form action="PUT" id="edit-frm" class="border-1 border-zinc-100 pt-6 w-full max-w-md flex flex-col gap-6 mx-auto shadow-lg p-10 rounded-md">
         <div class="flex flex-col">
             <label for="user_name" class="text-sm  text-gray-500 mb-1">
                 First Name:
@@ -35,24 +35,25 @@
                 mix-check="{{ x.ADDRESS_REGEX }}"/>
         </div>
 
-        <div class="flex flex-col">
-            <label for="user_postalcode" class="text-sm text-gray-600 mb-1">Postalcode</label>
-            <input
-                name="user_postalcode"
-                type="text"
-                value="{{ user.account_postalcode }}"
-                mix-check="{{ x.POSTALCODE_REGEX }}"/>
+        <div class="flex flex-row gap-5">
+            <div class="flex flex-col w-2/3">
+                <label for="user_city" class="text-sm text-gray-600 mb-1">City</label>
+                <input
+                    name="user_city"
+                    type="text"
+                    value="{{ user.account_city }}"
+                    mix-check="{{ x.ADDRESS_REGEX }}"/>
+            </div>
+            <div class="flex flex-col w-1/3">
+                <label for="user_postalcode" class="text-sm text-gray-600 mb-1">Postalcode</label>
+                <input
+                    name="user_postalcode"
+                    type="text"
+                    value="{{ user.account_postalcode }}"
+                    mix-check="{{ x.POSTALCODE_REGEX }}"/>
+            </div>
         </div>
 
-        <div class="flex flex-col">
-            <label for="user_city" class="text-sm text-gray-600 mb-1">City</label>
-            <input
-                name="user_city"
-                type="text"
-                value="{{ user.account_city }}"
-                mix-check="{{ x.ADDRESS_REGEX }}"/>
-        </div>
-        
         <div class="flex flex-col">
             <label for="user_email" class="text-sm  text-gray-500 mb-1">
                 Email
@@ -71,10 +72,10 @@
             class="bg-blue-500 text-white font-medium py-2 px-4 rounded-md hover:bg-blue-600 transition duration-200">
             Save
         </button>
+        <button class="open-delete-modal-btn text-red-500 font-semibold border-b-2 border-transparent leading-none w-fit mx-auto hover:border-red-500 transition-colors duration-200 ease-in-out">
+            Delete account
+        </button>
     </form>
-    <button class="open-delete-modal-btn bg-red-500 mt-20 text-white py-2 px-4 rounded-lg hover:bg-red-600 transition-colors duration-200 ease-in-out">
-        Delete account
-    </button>
     <div class="delete-modal fixed inset-0 bg-black bg-opacity-50 justify-center items-center hidden">
         <div class="bg-white p-8 rounded-lg shadow-lg w-96">
             <form>
