--- a/templates/__item.html
+++ b/templates/__item.html
@@ -1,28 +1,41 @@
-<a href="/add-item/{{ item.item_pk }}" class="shadow-md rounded-lg h-36 border-1 border-zinc-100 max-w-[30rem] min-w-80 w-1/3 hover:shadow-lg transition-shadow relative group">
-<article class="flex p-3 justify-between w-full h-full ">
-    <div class="w-3/5 flex flex-col justify-between pr-5">
-        <div>
-            <p class="text-sm pb-2.5">{{ item.item_title }}</p>
-            <p class="text-gray-500 text-sm font-light m-0 line-clamp-2">{{ item.item_description }}</p>
+<div class="shadow-md rounded-lg h-36 border-1 border-zinc-100 max-w-[30rem] min-w-80 w-1/3 hover:shadow-lg transition-shadow relative group overflow-hidden">
+    <article class="flex p-3 justify-between w-full h-full ">
+        <div class="w-3/5 flex flex-col justify-between pr-5">
+            <div>
+                <p class="text-sm pb-2.5">{{ item.item_title }}</p>
+                <p class="text-gray-500 text-sm font-light m-0 line-clamp-2">{{ item.item_description }}</p>
+            </div>
+            <div class="flex gap-3 items-baseline">
+                <p class="text-blue-700 text-sm font-light m-0">DKK {{ item.item_price }}</p>
+                {% if show_popular %}
+                <p class="px-2 py-1 w-fit text-xs text-white bg-blue-700 rounded-md">Popular</p>
+                {% endif %}
+            </div>
         </div>
-        <div class="flex gap-3 items-baseline">
-            <p class="text-blue-700 text-sm font-light m-0">DKK {{ item.item_price }}</p>
-            {% if show_popular %}
-            <p class="px-2 py-1 w-fit text-xs text-white bg-blue-700 rounded-md">Popular</p>
-            {% endif %}
-        </div>
-    </div>
-    <div class="w-2/5 h-full overflow-hidden flex justify-center items-center rounded-lg">
-        <img
-            src="{{ url_for('static', filename='item_images/' + item['item_image_names'][0]) }}"
-            alt="{{ item.item_title }}"
-            class="h-full w-full object-cover" />
-    </div>
-</article>
+        <div id="slider-{{ item.item_pk }}" class="group w-2/5 h-full overflow-hidden flex justify-center items-center rounded-lg relative">
+            <div id="slider-{{ item.item_pk }}" class="image-slider h-full w-full">
+                {% for image_name in item.item_image_names %}
+                <img src="{{ url_for('static', filename='item_images/' + image_name) }}" alt="{{ item.item_title }}"
+                class="slider-image h-full w-full object-cover" />
+                {% endfor %}
+            </div>
 
-<div class="absolute inset-0 bg-blue-400 bg-opacity-20 opacity-0 rounded-lg group-hover:opacity-100 flex justify-center items-center transition-opacity">
-    <div class="size-12 bg-white rounded-full flex justify-center items-center hover:scale-125 transition-transform">
-        <span class="text-blue-700 font-bold text-4xl pb-1">&plus;</span>
-    </div>
+            <button class="prev-arrow absolute top-1/2 left-1 transform -translate-y-1/2 p-1 hover:bg-gray-200 hover:bg-opacity-30 transition-colors text-white rounded-full">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
+                </svg>
+            </button>
+            <button class="next-arrow absolute top-1/2 right-1 transform -translate-y-1/2 p-1 hover:bg-gray-200 hover:bg-opacity-30 transition-colors text-white rounded-full">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+                </svg>
+            </button>
+        </div>
+        <a href="/add-item/{{ item.item_pk }}" class="absolute leading-none top-0 right-0 px-3 pb-2 rounded-bl-3xl text-xl bg-blue-100 hover:scale-125 hover:-translate-x-1 hover:translate-y-1 transition-transform duration-200 ease-in-out">
+            <span class="text-blue-700 font-bold text-4xl">&plus;</span>
+        </a>
+    </article>
 </div>
-</a>
+
+    
+
