--- a/templates/__item.html
+++ b/templates/__item.html
@@ -1,4 +1,4 @@
-<div class="shadow-md rounded-lg h-36 border-1 border-zinc-100 max-w-[30rem] min-w-80 w-1/3 hover:shadow-lg transition-shadow relative group overflow-hidden">
+<div class="shadow-md rounded-lg h-36 border-1 border-zinc-100  min-w-96 w-[32%] relative group overflow-hidden">
     <article class="flex p-3 justify-between w-full h-full ">
         <div class="w-3/5 flex flex-col justify-between pr-5">
             <div>
