--- a/templates/view_all_items.html
+++ b/templates/view_all_items.html
@@ -4,7 +4,7 @@
     <h1 class="text-5xl font-extrabold mb-2">Menu items near me</h1>
     <h2 class="text-3xl font-semibold mb-10">All items</h2>
     <div class="flex flex-col items-center pb-5">
-        <div id="items" class="flex flex-wrap justify-center items-center gap-3">
+        <div id="items" class="flex flex-wrap justify-center items-center gap-5 w-full">
             {% for item in items %}
                 {% include "__item.html"%}
             {% endfor %}
