--- a/templates/view_basket.html
+++ b/templates/view_basket.html
@@ -6,31 +6,44 @@
     {% if items %}
     <ul class="border-b">
         {% for item in items %}
-            <li class="w-full flex p-3 border-b">
-              <div class="w-1/6 h-20 overflow-hidden flex justify-center items-center rounded-lg">   
-                <img
-                    src="{{ url_for('static', filename='item_images/' + item['item_image_names'][0]) }}"
-                    alt="{{ item.item_title }}"
-                    class="h-full w-full object-cover" />
-              </div>
-              <div class="flex flex-col justify-between ml-4 flex-1">
-                <div>
-                    <p class="font-semibold m-0">{{ item.item_title }}</p>
-                    <p class="text-gray-600 text-sm font-light m-0">{{ item.item_description }}</p>
+            <li class="w-full flex py-5 border-b items-center h-44">
+              <div id="slider-{{ item.item_pk }}" class="group w-1/5 h-full overflow-hidden flex justify-center items-center rounded-lg relative">
+                <div id="slider-{{ item.item_pk }}" class="image-slider h-full w-full">
+                    {% for image_name in item.item_image_names %}
+                    <img src="{{ url_for('static', filename='item_images/' + image_name) }}" alt="{{ item.item_title }}"
+                    class="slider-image h-full w-full object-cover" />
+                    {% endfor %}
                 </div>
-                <p class="text-blue-500 text-sm font-semibold m-0">DKK {{ item.item_price }}</p>
+    
+                <button class="prev-arrow absolute top-1/2 left-1 transform -translate-y-1/2 p-1 hover:bg-gray-200 hover:bg-opacity-30 transition-colors text-white rounded-full">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
+                    </svg>
+                </button>
+                <button class="next-arrow absolute top-1/2 right-1 transform -translate-y-1/2 p-1 hover:bg-gray-200 hover:bg-opacity-30 transition-colors text-white rounded-full">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+                    </svg>
+                </button>
+            </div>
+              <div class="flex flex-col justify-between ml-4 h-full w-2/5">
+                <div>
+                    <p class="font-semibold text-lg pb-2">{{ item.item_title }}</p>
+                    <p class="text-gray-600 text-sm font-light">{{ item.item_description }}</p>
+                </div>
+                <p class="text-blue-500 text-sm font-semibold ">DKK {{ item.item_price }}</p>
               </div>
                 
-              <div class="flex items-center justify-center gap-5">
+              <div class="flex items-center justify-end gap-5 w-2/5">
                 <div class="flex items-center space-x-2">
                   <a href="/decrease-quantity/{{ item.item_pk }}"
-                      class="bg-gray-300 text-gray-700 rounded-full w-8 h-8 flex items-center justify-center">
+                      class="bg-blue-100 text-blue-700 rounded-full text-xl size-7 pb-0.5 flex items-center justify-center transition-transform hover:scale-110">
                       -
                   </a>
-                  <span class="text-lg">{{ item.quantity }}</span>
+                  <span class="text-lg font-light px-3">{{ item.quantity }}</span>
                   <a href="/increase-quantity/{{ item.item_pk }}"
-                      class="bg-gray-300 text-gray-700 rounded-full w-8 h-8 flex items-center justify-center">
-                      +
+                  class="bg-blue-100 text-blue-700 rounded-full font-semibold size-7 pb-0.5 flex items-center justify-center transition-transform hover:scale-110">
+                  +
                   </a>
                 </div>
                   <a
@@ -39,7 +52,6 @@
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
                       <path fill-rule="evenodd" d="M16.5 4.478v.227a48.816 48.816 0 0 1 3.878.512.75.75 0 1 1-.256 1.478l-.209-.035-1.005 13.07a3 3 0 0 1-2.991 2.77H8.084a3 3 0 0 1-2.991-2.77L4.087 6.66l-.209.035a.75.75 0 0 1-.256-1.478A48.567 48.567 0 0 1 7.5 4.705v-.227c0-1.564 1.213-2.9 2.816-2.951a52.662 52.662 0 0 1 3.369 0c1.603.051 2.815 1.387 2.815 2.951Zm-6.136-1.452a51.196 51.196 0 0 1 3.273 0C14.39 3.05 15 3.684 15 4.478v.113a49.488 49.488 0 0 0-6 0v-.113c0-.794.609-1.428 1.364-1.452Zm-.355 5.945a.75.75 0 1 0-1.5.058l.347 9a.75.75 0 1 0 1.499-.058l-.346-9Zm5.48.058a.75.75 0 1 0-1.498-.058l-.347 9a.75.75 0 0 0 1.5.058l.345-9Z" clip-rule="evenodd" />
                     </svg>
-                    
                   </a>
               </div>
             </li>
