--- a/templates/view_all_items_admin.html
+++ b/templates/view_all_items_admin.html
@@ -1,62 +1,77 @@
 {% include "_top_logged.html" %}
 
-<main class="w-full px-20">
-    <h1 class="text-4xl font-semibold mb-2">All items</h1> 
-    <h2 class="text-xl font-semibold mb-10">All menu items registered by each restaurant</h2>
-    <table class="w-full table-auto border-collapse mb-6">
-        <thead>
-            <tr class="text-left border-b">
-                <th class="py-2 px-4">Restaurant</th>
-                <th class="py-2 px-4">Title</th>
-                <th class="py-2 px-4">Block item</th>
-                <th class="py-2 px-4">Delete user</th>
+<main class="flex h-screen px-20 gap-8">
+    <div class="w-64 bg-blue-100 rounded-lg p-5">
+        <div class="text-4xl font-bold font-baloo pb-10">
+            Admin
+        </div>
+        <ul class="space-y-4">
+            <li><a href="{{url_for('view_admin')}}" class="border-b-1  hover:border-zinc-900 {% if request.endpoint == 'view_admin' %}border-zinc-900 {% else %} border-transparent{% endif %}">Dashboard</a></li>
+            <li><a href="{{url_for('view_all_users')}}" class="border-b-1  hover:border-zinc-900 {% if request.endpoint == 'view_all_users' %}border-zinc-900 {% else %} border-transparent{% endif %}">Users</a></li>
+            <li><a href="{{url_for('view_all_restaurants_admin')}}" class="border-b-1  hover:border-zinc-900 {% if request.endpoint == 'view_all_restaurants_admin' %}border-zinc-900 {% else %} border-transparent{% endif %}">Restaurants</a></li>
+            <li><a href="{{url_for('view_all_items_admin')}}" class="border-b-1  hover:border-zinc-900 {% if request.endpoint == 'view_all_items_admin' %}border-zinc-900 {% else %} border-transparent{% endif %}">Items</a></li>
+            <li><a href="{{ url_for('view_edit_profile') }}" class="border-b-1  hover:border-zinc-900 {% if request.endpoint == 'view_edit_profile' %}border-zinc-900 {% else %} border-transparent{% endif %}">Settings</a></li>
+        </ul>
+    </div>
+
+    <div class="flex-1">
+        <h1 class="text-4xl font-semibold mb-2">All items</h1> 
+        <h2 class="text-xl font-semibold mb-10">All menu items registered by each restaurant</h2>
+        <table class="w-full table-auto border-collapse mb-6">
+            <thead>
+                <tr class="text-left border-b">
+                    <th class="py-2 px-4">Restaurant</th>
+                    <th class="py-2 px-4">Title</th>
+                    <th class="py-2 px-4">Block item</th>
+                    <th class="py-2 px-4">Delete user</th>
+                </tr>
+            </thead>
+            <tbody>
+        {% for item in items %} 
+        <tr id="items" class="border-b">
+                <td class="py-2 px-4">{{ item.restaurant_name }}</td>
+                <td class="py-2 px-4">{{ item.item_title }}</td>
+                <td id="block-unblock-item-btn-{{ item.item_pk }}" class="py-2 px-4">
+                    {% if not item.item_blocked_at %}
+                    <form id="block-item-{{ item.item_pk }}">
+                        <button
+                            class="bg-red-500 text-white py-1 px-3 rounded hover:bg-red-600 transition"
+                            mix-put="/block/item/{{ item.item_pk }}"
+                            mix-data="#block-item-{{ item.item_pk }}"
+                            mix-target="#block-item-{{ item.item_pk }}">
+                            Block
+                        </button>
+                    </form>
+                    {% else %}
+                    <form id="unblock-item-{{ item.item_pk }}">
+                        <button
+                            class="bg-green-500 text-white py-1 px-3 rounded hover:bg-green-600 transition"
+                            mix-put="/unblock/item/{{ item.item_pk }}"
+                            mix-data="#unblock-item-{{ item.item_pk }}"
+                            mix-target="#unblock-item-{{ item.item_pk }}">
+                            Unblock
+                        </button>
+                    </form>
+                    {% endif %}
+                </td>
+                <td class="py-2 px-4" id="delete-item-{{ item.item_pk }}">
+                    {% if item.item_deleted_at == 0 %}
+                    <button
+                        class=""
+                        title="Delete Item"
+                        mix-delete="/admin/delete/item/{{ item.item_pk }}"
+                        mix-target="#delete-item-{{ item.item_pk }}">
+                        🗑️
+                    </button>
+                    {% else %}
+                    <div class="flex items-center">{{ item.item_deleted_at }}</div>
+                    {% endif %}
+                </td>
             </tr>
-        </thead>
-        <tbody>
-    {% for item in items %} 
-    <tr id="items" class="border-b">
-            <td class="py-2 px-4">{{ item.restaurant_name }}</td>
-            <td class="py-2 px-4">{{ item.item_title }}</td>
-            <td id="block-unblock-item-btn-{{ item.item_pk }}" class="py-2 px-4">
-                {% if not item.item_blocked_at %}
-                <form id="block-item-{{ item.item_pk }}">
-                    <button
-                        class="bg-red-500 text-white py-1 px-3 rounded hover:bg-red-600 transition"
-                        mix-put="/block/item/{{ item.item_pk }}"
-                        mix-data="#block-item-{{ item.item_pk }}"
-                        mix-target="#block-item-{{ item.item_pk }}">
-                        Block
-                    </button>
-                </form>
-                {% else %}
-                <form id="unblock-item-{{ item.item_pk }}">
-                    <button
-                        class="bg-green-500 text-white py-1 px-3 rounded hover:bg-green-600 transition"
-                        mix-put="/unblock/item/{{ item.item_pk }}"
-                        mix-data="#unblock-item-{{ item.item_pk }}"
-                        mix-target="#unblock-item-{{ item.item_pk }}">
-                        Unblock
-                    </button>
-                </form>
-                {% endif %}
-            </td>
-            <td class="py-2 px-4" id="delete-item-{{ item.item_pk }}">
-                {% if item.item_deleted_at == 0 %}
-                <button
-                    class=""
-                    title="Delete Item"
-                    mix-delete="/admin/delete/item/{{ item.item_pk }}"
-                    mix-target="#delete-item-{{ item.item_pk }}">
-                    🗑️
-                </button>
-                {% else %}
-                <div class="flex items-center">{{ item.item_deleted_at }}</div>
-                {% endif %}
-            </td>
-        </tr>
-    {% endfor %}
-    </tbody>
-    </table>
+        {% endfor %}
+        </tbody>
+        </table>
+    </div>
 </main>
 
 {% include "_bottom.html" %}
