--- a/templates/view_all_users.html
+++ b/templates/view_all_users.html
@@ -1,68 +1,82 @@
 {% include "_top_logged.html" %}
 
-<main class="w-full px-20">
-    <h1 class="text-4xl font-semibold mb-2">Users</h1> 
-    <h2 class="text-2xl font-semibold mb-10">All registered customers and partners</h2>
-    <table class="w-full table-auto border-collapse mb-6">
-        <thead>
-            <tr class="text-left border-b">
-                <th class="py-2 px-4">Name</th>
-                <th class="py-2 px-4">Email</th>
-                <th class="py-2 px-4">Address</th>
-                <th class="py-2 px-4">Role(s)</th>
-                <th class="py-2 px-4">Block user</th>
-                <th class="py-2 px-4">Delete user</th>
+<main class="flex h-screen px-20 gap-8">
+    <div class="w-64 bg-blue-100 rounded-lg p-5">
+        <div class="text-4xl font-bold font-baloo pb-10">
+            Admin
+        </div>
+        <ul class="space-y-4">
+            <li><a href="{{url_for('view_admin')}}" class="border-b-1  hover:border-zinc-900 {% if request.endpoint == 'view_admin' %}border-zinc-900 {% else %} border-transparent{% endif %}">Dashboard</a></li>
+            <li><a href="{{url_for('view_all_users')}}" class="border-b-1  hover:border-zinc-900 {% if request.endpoint == 'view_all_users' %}border-zinc-900 {% else %} border-transparent{% endif %}">Users</a></li>
+            <li><a href="{{url_for('view_all_restaurants_admin')}}" class="border-b-1  hover:border-zinc-900 {% if request.endpoint == 'view_all_restaurants_admin' %}border-zinc-900 {% else %} border-transparent{% endif %}">Restaurants</a></li>
+            <li><a href="{{url_for('view_all_items_admin')}}" class="border-b-1  hover:border-zinc-900 {% if request.endpoint == 'view_all_items_admin' %}border-zinc-900 {% else %} border-transparent{% endif %}">Items</a></li>
+            <li><a href="{{ url_for('view_edit_profile') }}" class="border-b-1  hover:border-zinc-900 {% if request.endpoint == 'view_edit_profile' %}border-zinc-900 {% else %} border-transparent{% endif %}">Settings</a></li>
+        </ul>
+    </div>
+    <div class="flex-1">
+        <h1 class="text-4xl font-semibold mb-2">Users</h1> 
+        <h2 class="text-2xl font-semibold mb-10">All registered customers and partners</h2>
+        <table class="w-full table-auto border-collapse mb-6">
+            <thead>
+                <tr class="text-left border-b">
+                    <th class="py-2 px-4">Name</th>
+                    <th class="py-2 px-4">Email</th>
+                    <th class="py-2 px-4">Address</th>
+                    <th class="py-2 px-4">Role(s)</th>
+                    <th class="py-2 px-4">Block user</th>
+                    <th class="py-2 px-4">Delete user</th>
+                </tr>
+            </thead>
+            <tbody>
+        {% for account in accounts %} 
+            <tr class="border-b">
+                <td class="py-2 px-4">{{ account.user_name }} {{ account.user_last_name }}</td>
+                <td class="py-2 px-4">{{ account.user_email }}</td>
+                <td class="py-2 px-4">{{ account.user_street }}, {{ account.user_postalcode }} {{ account.user_city }}</td>
+                <td class="py-2 px-4">{{ account.roles }}</td>
+                <td id="block-unblock-user-btn-{{ account.user_pk }}" class="py-2 px-4">
+                    {% if not account.account_blocked_at %}
+                    <form id="block-user-{{ account.user_pk }}">
+                        <button
+                            class="bg-red-500 text-white py-1 px-3 rounded hover:bg-red-600 transition"
+                            mix-put="/block/user/{{ account.user_pk }}"
+                            mix-data="#block-user-{{ account.user_pk }}"
+                            mix-target="#block-user-{{ account.user_pk }}">
+                            Block
+                        </button>
+                    </form>
+                    {% else %}
+                    <form id="unblock-user-{{ account.user_pk }}">
+                        <button
+                            class="bg-green-500 text-white py-1 px-3 rounded hover:bg-green-600 transition"
+                            mix-put="/unblock/user/{{ account.user_pk }}"
+                            mix-data="#unblock-user-{{ account.user_pk }}"
+                            mix-target="#unblock-user-{{ account.user_pk }}">
+                            Unblock
+                        </button>
+                    </form>
+                    {% endif %}
+                </td>
+                <td class="py-2 px-4" id="delete-user-{{ account.user_pk }}">
+                    {% if account.user_deleted_at == 0 %}
+                    <button
+                        class=""
+                        title="Delete User"
+                        mix-delete="/admin/delete/user/{{ account.user_pk }}"
+                        mix-target="#delete-user-{{ account.user_pk }}">
+                        🗑️
+                    </button>
+                    {% else %}
+                    <div class="flex items-center">{{ account.user_deleted_at | format_epoch }}</div>
+                    {% endif %}
+                </td>
             </tr>
-        </thead>
-        <tbody>
-    {% for account in accounts %} 
-        <tr class="border-b">
-            <td class="py-2 px-4">{{ account.user_name }} {{ account.user_last_name }}</td>
-            <td class="py-2 px-4">{{ account.user_email }}</td>
-            <td class="py-2 px-4">{{ account.user_street }}, {{ account.user_postalcode }} {{ account.user_city }}</td>
-            <td class="py-2 px-4">{{ account.roles }}</td>
-            <td id="block-unblock-user-btn-{{ account.user_pk }}" class="py-2 px-4">
-                {% if not account.account_blocked_at %}
-                <form id="block-user-{{ account.user_pk }}">
-                    <button
-                        class="bg-red-500 text-white py-1 px-3 rounded hover:bg-red-600 transition"
-                        mix-put="/block/user/{{ account.user_pk }}"
-                        mix-data="#block-user-{{ account.user_pk }}"
-                        mix-target="#block-user-{{ account.user_pk }}">
-                        Block
-                    </button>
-                </form>
-                {% else %}
-                <form id="unblock-user-{{ account.user_pk }}">
-                    <button
-                        class="bg-green-500 text-white py-1 px-3 rounded hover:bg-green-600 transition"
-                        mix-put="/unblock/user/{{ account.user_pk }}"
-                        mix-data="#unblock-user-{{ account.user_pk }}"
-                        mix-target="#unblock-user-{{ account.user_pk }}">
-                        Unblock
-                    </button>
-                </form>
-                {% endif %}
-            </td>
-            <td class="py-2 px-4" id="delete-user-{{ account.user_pk }}">
-                {% if account.user_deleted_at == 0 %}
-                <button
-                    class=""
-                    title="Delete User"
-                    mix-delete="/admin/delete/user/{{ account.user_pk }}"
-                    mix-target="#delete-user-{{ account.user_pk }}">
-                    🗑️
-                </button>
-                {% else %}
-                <div class="flex items-center">{{ account.user_deleted_at | format_epoch }}</div>
-                {% endif %}
-            </td>
-        </tr>
 
-        {% endfor %}
-    </tbody>
-</table>
-{% include "___btn_more.html"%}
+            {% endfor %}
+        </tbody>
+    </table>
+    {% include "___btn_more.html"%}
+    </div>
 </main>
 
 {% include "_bottom.html" %}
