--- a/templates/view_all_users.html
+++ b/templates/view_all_users.html
@@ -75,7 +75,18 @@
             {% endfor %}
         </tbody>
     </table>
-    {% include "___btn_more.html"%}
+    {% if total_pages > 1 %}
+    <nav>
+        <ul class="pagination flex gap-3">
+            {% for p in range(1, total_pages + 1) %}
+                <li class="page-item {% if p == current_page %} active {% endif %}">
+                    <a class="page-link" href="{{ url_for('view_all_users', page=p) }}">{{ p }}</a>
+                </li>
+            {% endfor %}
+        </ul>
+    </nav>
+{% endif %}
+
     </div>
 </main>
 
