--- a/templates/view_all_users.html
+++ b/templates/view_all_users.html
@@ -75,18 +75,31 @@
             {% endfor %}
         </tbody>
     </table>
-    {% if total_pages > 1 %}
-    <nav>
-        <ul class="pagination flex gap-3">
-            {% for p in range(1, total_pages + 1) %}
-                <li class="page-item {% if p == current_page %} active {% endif %}">
-                    <a class="page-link" href="{{ url_for('view_all_users', page=p) }}">{{ p }}</a>
-                </li>
-            {% endfor %}
-        </ul>
-    </nav>
-{% endif %}
-
+    <div class="flex justify-center items-center space-x-4">
+        <!-- Left Arrow -->
+        {% if current_page > 1 %}
+            <a href="{{ url_for('view_all_users', page=current_page - 1) }}" class="bg-blue-50 text-blue-700 rounded-full text-lg size-7 flex items-center justify-center transition-colors hover:bg-blue-100">
+                &#8592;
+            </a>
+        {% else %}
+            <span class="rounded-full text-lg size-7 flex items-center justify-center text-zinc-400 bg-zinc-100 cursor-default">&#8592;</span>
+        {% endif %}
+    
+        <!-- Current Page / Total Pages -->
+        <span>
+            {{ current_page }} / {{ total_pages }}
+        </span>
+    
+        <!-- Right Arrow -->
+        {% if current_page < total_pages %}
+            <a href="{{ url_for('view_all_users', page=current_page + 1) }}" class="bg-blue-50 text-blue-700 rounded-full text-lg size-7 flex items-center justify-center transition-colors hover:bg-blue-100">
+                &#8594;
+            </a>
+        {% else %}
+            <span <span class="rounded-full text-lg size-7 flex items-center justify-center text-zinc-400 bg-zinc-100 cursor-default">&#8594;</span>
+        {% endif %}
+    </div>
+    
     </div>
 </main>
 
