--- a/templates/view_all_items_admin.html
+++ b/templates/view_all_items_admin.html
@@ -71,6 +71,25 @@
         {% endfor %}
         </tbody>
         </table>
+        <div class="flex justify-center items-center space-x-4">
+            {% if current_page > 1 %}
+                <a href="{{ url_for('view_all_items_admin', page=current_page - 1) }}" class="bg-blue-50 text-blue-700 rounded-full text-lg size-7 flex items-center justify-center transition-colors hover:bg-blue-100">
+                    &#8592;
+                </a>
+            {% else %}
+                <span class="rounded-full text-lg size-7 flex items-center justify-center text-zinc-400 bg-zinc-100 cursor-default">&#8592;</span>
+            {% endif %}
+        
+            <span>{{ current_page }} / {{ total_pages }}</span>
+        
+            {% if current_page < total_pages %}
+                <a href="{{ url_for('view_all_items_admin', page=current_page + 1) }}" class="bg-blue-50 text-blue-700 rounded-full text-lg size-7 flex items-center justify-center transition-colors hover:bg-blue-100">
+                    &#8594;
+                </a>
+            {% else %}
+                <span <span class="rounded-full text-lg size-7 flex items-center justify-center text-zinc-400 bg-zinc-100 cursor-default">&#8594;</span>
+            {% endif %}
+        </div>
     </div>
 </main>
 
