--- a/templates/view_all_users.html
+++ b/templates/view_all_users.html
@@ -76,7 +76,6 @@
         </tbody>
     </table>
     <div class="flex justify-center items-center space-x-4">
-        <!-- Left Arrow -->
         {% if current_page > 1 %}
             <a href="{{ url_for('view_all_users', page=current_page - 1) }}" class="bg-blue-50 text-blue-700 rounded-full text-lg size-7 flex items-center justify-center transition-colors hover:bg-blue-100">
                 &#8592;
@@ -85,12 +84,8 @@
             <span class="rounded-full text-lg size-7 flex items-center justify-center text-zinc-400 bg-zinc-100 cursor-default">&#8592;</span>
         {% endif %}
     
-        <!-- Current Page / Total Pages -->
-        <span>
-            {{ current_page }} / {{ total_pages }}
-        </span>
+        <span>{{ current_page }} / {{ total_pages }}</span>
     
-        <!-- Right Arrow -->
         {% if current_page < total_pages %}
             <a href="{{ url_for('view_all_users', page=current_page + 1) }}" class="bg-blue-50 text-blue-700 rounded-full text-lg size-7 flex items-center justify-center transition-colors hover:bg-blue-100">
                 &#8594;
