admin_dashboard_data

--- a/templates/view_admin.html
+++ b/templates/view_admin.html
@@ -23,15 +23,15 @@
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mb-8">
             <div class="bg-white p-4 rounded-lg shadow-md flex flex-col justify-center">
                 <h3 class=" font-semibold text-blue-700 pb-2">Total Customers</h3>
-                <p class="text-2xl font-bold text-gray-900 ">1,230</p>
+                <p class="text-2xl font-bold text-gray-900 ">{{ customer_count }}</p>
             </div>
             <div class="bg-white p-4 rounded-lg shadow-md flex flex-col justify-center">
                 <h3 class=" font-semibold text-blue-700 pb-2">Total Partners</h3>
-                <p class="text-2xl font-bold text-gray-900 ">1,230</p>
+                <p class="text-2xl font-bold text-gray-900 ">{{ partner_count }}</p>
             </div>
             <div class="bg-white p-4 rounded-lg shadow-md flex flex-col justify-center">
                 <h3 class=" font-semibold text-blue-700 pb-2">Total Restaurants</h3>
-                <p class="text-2xl font-bold text-gray-900 ">1,230</p>
+                <p class="text-2xl font-bold text-gray-900 ">{{ restaurant_count }}</p>
             </div>
         </div>
 
